July 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Now compiles under gcc 3.1

July 8 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* BodyParts() search & replaced with GetBodyParts()
	* If SeeWholeMapCheat is active, character look info is now available even if the target can't be seen
	* Name functions are now much faster
	* New, *yet* faster techniques for string handling are available:
	  * AddName(String, Case); which is much faster than String += GetName(Case);
	  * String << AnotherString << Int << CString << Etc; which is much faster than
	    String += AnotherString + Int + CString + Etc; (you must #include "stdover.h" though)
	* Script generated altars again randomize their divine owner correctly
	* Attnam's and level 10's altars are again owned correctly

July 8 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* snake added (although it doesn't work)
	* angel healing friends fixed.

July 8 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Chest and unicorn look better now
	* Corrected The Unicorn of Godly Strength and Speed Spawning Bug
	* Decreased the brightness of palette index 148 by seven in all materialcolorized
	  graphics files (don't ask why)

July 8 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added CreateDivineConfigurations boolean datavalue to all databases, which can be used
	  to add new god-dependent characters, items, materials and terrains very easily,
	  and to define varying attributes and specialities for them. It is now used for
	  angels, kamikaze dwarves, holy books and altars and reduces their overlapping code a lot,
	  and unique holy waters for each god and other similiar wonderful features are
	  a piece of cake with the new system
	* Angel, golem and genie graphics have been converted to humanoids by me. (btw, Kahvi is a moron)
	* All lterrains have been datafiled to glterra.dat and olterra.dat;
	  it is now possible to add new terrains without modifying code and blaah blaah