@@ -1,3 +1,8 @@
+July 11 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* Poisoned state added
+	* spiders, school food and snakes to use the state
+
 July 9 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Now compiles under gcc 3.1
